--- a/frontend/src/styles/_config.scss
+++ b/frontend/src/styles/_config.scss
@@ -14,6 +14,7 @@ $color-bg-dark: #141625;
 
 $color-accent-1: #1E2139;
 $color-accent-2: #252945;
+$color-accent-3: #373B53;
 
 $color-contrast-medium-darker: #888EB0;
 $color-contrast-medium-lighter: #7E88C3;
