feat(navbar): add to basic styling; refactor: move assets to src root;

--- a/frontend/src/app/components/shared/navbar/navbar.component.html
+++ b/frontend/src/app/components/shared/navbar/navbar.component.html
@@ -1,7 +1,15 @@
 <nav>
   <div class="logo-container">
     <div class="pacman-logo">
-
+      
     </div>
   </div>
-</nav>
+  <div class="bottom-container">
+    <div class="theme-selector-container">
+      <img [src]="'assets/icon-moon.svg'" alt="">
+    </div>
+    <div class="profile-img-container">
+      <img [src]="'assets/image-avatar.jpg'" alt="profile.img">
+    </div>
+  </div>
+</nav> 
