--- a/frontend/src/styles/_config.scss
+++ b/frontend/src/styles/_config.scss
@@ -24,3 +24,7 @@ $color-contrast-dark: #0C0E16;
 $color-danger: #EC5757;
 $color-danger-faded: #9277FF;
   
+
+// Containers config
+
+$sidebar-nav-width: 103px;
