--- a/frontend/src/app/components/pages/invoices/components/invoices.header.component.html
+++ b/frontend/src/app/components/pages/invoices/components/invoices.header.component.html
@@ -1,1 +1,11 @@
-<h1>Invoices Header Component</h1>
+<header>
+  <div class="content-flex-container">
+    <div class="container-flex-left">
+      <h1>Invoices</h1>
+      <span>There are 7 total invoices</span>
+    </div>
+    <div class="container-flex-right">
+      <button-hero></button-hero>
+    </div>
+  </div>
+</header>
