add shared popum menu component with basic template;

--- a/frontend/src/app/components/pages/invoices/components/invoices.header.component.scss
+++ b/frontend/src/app/components/pages/invoices/components/invoices.header.component.scss
@@ -13,6 +13,10 @@ header{
 }
 
 .container-flex-right{
+  width: 100%;
+  max-width: 308px;
+
   display: flex;
   align-items: center;
+  justify-content: space-between;
 }
