--- a/frontend/src/app/components/pages/invoices/components/invoices.header.component.html
+++ b/frontend/src/app/components/pages/invoices/components/invoices.header.component.html
@@ -5,6 +5,7 @@
       <span>There are 7 total invoices</span>
     </div>
     <div class="container-flex-right">
+      <selection-popup-menu></selection-popup-menu>
       <button-hero></button-hero>
     </div>
   </div>
