--- a/frontend/src/app/components/pages/invoices/components/invoices.header.component.scss
+++ b/frontend/src/app/components/pages/invoices/components/invoices.header.component.scss
@@ -1,3 +1,5 @@
+@import '/src/styles/config';
+
 header{
   width: 100%;
   height: 59px;
@@ -5,6 +7,19 @@ header{
   margin-top: 72px;
 
   border: solid 1px pink;
+}
+
+.container-flex-left{
+  h1{
+    font-size: 32px;
+  }
+
+  span{
+    font-size: 12px;
+    color: $color-contrast-medium-darker;
+
+    font-weight: 500;
+  };
 }
 
 .content-flex-container{
