create invoiceComponent and refactor invoicesComponent to InvoicesListComponent;

--- a/frontend/src/app/components/layout/page-frame/page-frame.component.html
+++ b/frontend/src/app/components/layout/page-frame/page-frame.component.html
@@ -1,5 +1,5 @@
 <div class="content-container">
   <div class="page-container">
-    <app-invoices></app-invoices>
+    <invoices-list-component></invoices-list-component>
   </div>
 </div>
