--- a/frontend/src/app/components/pages/invoices/components/invoice.component.scss
+++ b/frontend/src/app/components/pages/invoices/components/invoice.component.scss
@@ -4,8 +4,8 @@
   width: 100%;
   height: 72px;
 
-  display: flex;
-  justify-content: space-between;
+  display: grid;
+  grid-template-columns: 1fr 2fr 2fr;
   align-items: center;
 
   padding-left: 32px;
@@ -34,4 +34,10 @@
 
   display: flex;
   justify-content: space-between;
+}
+
+.container-right{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
