complete basic invoices page template;

--- a/frontend/src/app/components/pages/invoices/invoices.list.component.html
+++ b/frontend/src/app/components/pages/invoices/invoices.list.component.html
@@ -1,4 +1,11 @@
 <invoices-header-component></invoices-header-component>
 <div class="content-container">
-  <invoice></invoice>
+  <div class="invoices-list-container">
+    <invoice></invoice>
+    <invoice></invoice>
+    <invoice></invoice>
+    <invoice></invoice>
+    <invoice></invoice>
+    <invoice></invoice>
+  </div>
 </div>
