--- a/frontend/src/app/components/pages/invoices/components/invoice.component.scss
+++ b/frontend/src/app/components/pages/invoices/components/invoice.component.scss
@@ -12,6 +12,7 @@
   padding-right: 32px;
 
   background-color: white;
+  border-radius: 8px;
   border: solid 2px cyan;
 }
 
@@ -34,10 +35,18 @@
 
   display: flex;
   justify-content: space-between;
+
+  margin-right: 50px;
+  margin-left: -20px;
 }
 
 .container-right{
   display: flex;
   justify-content: space-between;
   align-items: center;
+}
+
+.price-box span{
+  font-size: 16px;
+  font-weight: bold;
 }
