fix(nav): rounded borders now don't seclude backgrounds; add nav-list container;

--- a/frontend/src/app/components/layout/navbar/navbar.component.html
+++ b/frontend/src/app/components/layout/navbar/navbar.component.html
@@ -4,6 +4,12 @@
       
     </div>
   </div>
+
+  <div class="nav-menu">
+
+  </div>
+
+
   <div class="bottom-container">
     <div class="theme-selector-container">
       <img [src]="'assets/icon-moon.svg'" alt="">
