--- a/frontend/src/app/components/layout/navbar/navbar.component.scss
+++ b/frontend/src/app/components/layout/navbar/navbar.component.scss
@@ -1,24 +1,28 @@
 @import '/src/styles/config';
 
 nav{
-	width: $sidebar-nav-width;
-	height: 100%;
-  min-height: 100vh;
+  position: relative; 
 
-	background-color: $color-accent-3;
+	width: $sidebar-nav-width;
+  height: 100vh;
+
+  background-color: transparent;
 
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  
+  overflow: hidden;
+
+  z-index: 20;
 }
 
 .logo-container{
 	position: relative;
 
-	height: $sidebar-nav-width;
-	width: $sidebar-nav-width;
+	min-height: $sidebar-nav-width;
+	min-width: $sidebar-nav-width;
 
-	background-color: $color-bg-light;
+	background-color: transparent;
 
   	border-bottom-right-radius: 20%;
 
@@ -99,6 +103,8 @@ nav{
   display: flex;
   justify-content: center;
   align-items: center;
+
+  background-color: $color-accent-3;
 }
 
 .profile-img-container{
@@ -111,7 +117,7 @@ nav{
   justify-content: center;
   align-items: center;
 
-  background-color: $color-bg-light;
+  background-color: transparent;
 
   &::before{
     content: '';
@@ -133,6 +139,28 @@ nav{
     border-radius: 50%;
 
     z-index: 5;
+  }
+}
+
+.nav-menu{
+  position: relative;
+
+  width: 100%;
+  height: 100%;
+
+  background-color: $color-accent-3;
+
+  &::before{ /* top border-radius gap fix */
+    content: '';
+    position: absolute;
+
+    top: -10px;
+    left: 0;
+
+    width: $sidebar-nav-width;
+    height: 10px;
+
+    background-color: $color-accent-3;
   }
 }
 
