--- a/frontend/src/app/components/layout/navbar/navbar.component.scss
+++ b/frontend/src/app/components/layout/navbar/navbar.component.scss
@@ -24,18 +24,15 @@ nav{
 
 	background-color: transparent;
 
-  	border-bottom-right-radius: 20%;
-
-
   	&::before{
   		content: '';
   		position: absolute;
 
   		width: 100%;
-  		height: 60%;
+  		height: 70%;
   		background-color: $color-primary-main;
 
-  		border-top-right-radius: 20%;
+  		border-top-right-radius: 20px;
 
   		z-index: 1;
   	}
@@ -51,8 +48,8 @@ nav{
 
   		background-color: $color-primary-accent;
 
-  		border-top-left-radius: 20%;
-  		border-bottom-right-radius: 20%;
+  		border-top-left-radius: 20px;
+  		border-bottom-right-radius: 20px;
 
   		z-index: 2;
   	}
@@ -129,7 +126,7 @@ nav{
     border-top: solid 1px #494E6E;
     background-color: $color-accent-3;
 
-    border-bottom-right-radius: 20%;
+    border-bottom-right-radius: 20px;
   }
 
   img{
@@ -154,11 +151,11 @@ nav{
     content: '';
     position: absolute;
 
-    top: -10px;
+    top: -20px;
     left: 0;
 
     width: $sidebar-nav-width;
-    height: 10px;
+    height: 20px;
 
     background-color: $color-accent-3;
   }
