add invoiceFormComponent with some basic styling;

--- a/frontend/src/app/components/pages/invoices/invoices.list.component.html
+++ b/frontend/src/app/components/pages/invoices/invoices.list.component.html
@@ -1,4 +1,5 @@
 <invoices-header-component></invoices-header-component>
+<invoice-form></invoice-form>
 <div class="content-container">
   <div class="invoices-list-container">
     <invoice></invoice>
