--- a/frontend/src/app/components/shared/inputs/input.field.component.scss
+++ b/frontend/src/app/components/shared/inputs/input.field.component.scss
@@ -25,4 +25,10 @@
 
   border: solid 2px $color-contrast-light;
   border-radius: 4px;
+  transition: border-color 0.3s ease;
+}
+
+.input-field-container > input:focus{
+  outline: none;
+  border-color: $color-primary-main;
 }
