--- a/frontend/src/app/components/pages/invoices/components/invoice-form-component/invoice.form.component.html
+++ b/frontend/src/app/components/pages/invoices/components/invoice-form-component/invoice.form.component.html
@@ -1,7 +1,6 @@
 <div [ngClass]="isActive ? 'top-container-background-dim active' :  'top-container-background-dim'">
   <div [ngClass]="isActive ? 'form-container active' : 'form-container'"> 
     <form>
-
       <header>
         <h2 *ngIf="!isNew">Edit <span class="hash-prefix">#</span>{{_tmpInvoiceName}}</h2>
         <h2 *ngIf="isNew">New Invoice</h2>
@@ -9,13 +8,16 @@
 
       <fieldset>
         <header>Bill From</header>
-        <input-field 
-          label="street adress"
-          placeholder="19 Union Terrace"
-          >
-        </input-field>
 
-        <div class="tripple-column-field-grid-container">
+        <div class="fields-grid-container">
+          <input-field 
+            label="street adress"
+            placeholder="19 Union Terrace"
+            >
+          </input-field>
+        </div>
+
+        <div class="fields-grid-container tripple-column-grid">
           <input-field></input-field>
           <input-field></input-field>
           <input-field></input-field>
@@ -26,20 +28,39 @@
       <fieldset>
         <header>Bill to</header>
 
-        <div class="full-width-input-container">
+        <div class="fields-grid-container">
           <input-field></input-field>
           <input-field></input-field>
           <input-field></input-field>
         </div>
 
-        <div class="tripple-column-field-grid-container">
+        <div class="fields-grid-container tripple-column-grid">
           <input-field></input-field>
           <input-field></input-field>
           <input-field></input-field>
         </div>
+
+        <div class="fields-grid-container dual-column-grid double-margin">
+          <input-field></input-field>
+          <input-field></input-field> 
+        </div>
+
+        <div class="fields-grid-container">
+          <input-field></input-field>
+        </div>
+
       </fieldset>
-
-      <button type="button" (click)="closeForm()">Cancel</button>
     </form>
   </div>
+
+  <div class="form-controlls-container">
+    <div class="flex-row-container">
+      <button>Discard</button>
+      <div>
+        <button>Save as Draft</button>
+        <button>Save & Send</button>
+      </div>
+    </div>
+  </div>
+
 </div>     
