--- a/frontend/src/app/components/pages/invoices/components/invoice-form-component/invoice.form.component.scss
+++ b/frontend/src/app/components/pages/invoices/components/invoice-form-component/invoice.form.component.scss
@@ -1,7 +1,12 @@
 @import '/src/styles/config';
 
+
+$controlls-bar-height: 110px;
+
+
 .top-container-background-dim{
   position: absolute;
+
   width: 100vw;
   height: 100vh;
 
@@ -46,12 +51,14 @@
   position: relative;
   transform: translate(-1000px, 0px);
 
-  height: 100vh;
+  max-height: 100vh;
 
   width: 80%;
   max-width: 719px;
 
   margin-right: 300px;
+
+  padding-bottom: $controlls-bar-height;
 
   background-color: white;
 
@@ -90,6 +97,10 @@
   overflow: hidden;
 }
 
+.form-container form > header, .form-container > form fieldset{
+  margin-bottom: 48px;
+}
+
 .hash-prefix{
   color: $color-contrast-medium-darker;
 }
@@ -97,8 +108,6 @@
 .form-container > form fieldset{
   min-width: 0; /* This resets browser default width formatting.. lost some time to this.. */
   border: none;
-
-  margin-bottom: 48px;
 }
 
 
@@ -110,18 +119,48 @@
   color: $color-primary-main;
 }
 
-.tripple-column-field-grid-container{
+.fields-grid-container{
   margin-top: 24px;
 
   display: grid;
-  grid-template-columns: 28% 28% 28%;
-  grid-column-gap: 8%;
-
   grid-row-gap: 24px;
 }
 
-.full-width-input-container{
+.tripple-column-grid{
   display: grid;
-  grid-template-columns: 1fr;
-  grid-row-gap: 24px;
+  grid-template-columns: 28% 28% 28%;
+  grid-column-gap: 8%;
+}
+
+.dual-column-grid{
+  grid-template-columns: 47.62% 47.62%;
+  grid-column-gap: 4.76%;
+}
+
+.double-margin{
+  margin-top: 48px;
+}
+
+.form-controlls-container{
+  position: absolute;
+
+  top: 100%;
+  left: 0;
+
+  height: $controlls-bar-height;
+  width: 80%;
+  max-width: 719px;
+
+  margin-top: -$controlls-bar-height;
+
+  z-index: 15;
+
+  background-color: white;
+
+  border-top-right-radius: 20px;
+  border-bottom-right-radius: 20px;
+
+  -webkit-box-shadow: 0px 34px 157px 0px rgba(0,0,0,0.21);
+  -moz-box-shadow: 0px 34px 157px 0px rgba(0,0,0,0.21);
+  box-shadow: 0px 34px 157px 0px rgba(0,0,0,0.21);
 }
