complete form buttons basic layout;

--- a/frontend/src/app/components/pages/invoices/components/invoice-form-component/invoice.form.component.html
+++ b/frontend/src/app/components/pages/invoices/components/invoice-form-component/invoice.form.component.html
@@ -53,12 +53,12 @@
     </form>
   </div>
 
-  <div class="form-controlls-container">
-    <div class="flex-row-container">
-      <button>Discard</button>
+  <div class="form-controls-container">
+    <div class="controls-flex-container">
+      <button class="button button-aux">Discard</button>
       <div>
-        <button>Save as Draft</button>
-        <button>Save & Send</button>
+        <button class="button button-secondary">Save as Draft</button>
+        <button class="button button-primary">Save & Send</button>
       </div>
     </div>
   </div>
