pipe invoiceForm triggering; other small updates;

--- a/frontend/src/app/components/pages/invoices/components/invoice-form-component/invoice.form.component.html
+++ b/frontend/src/app/components/pages/invoices/components/invoice-form-component/invoice.form.component.html
@@ -55,7 +55,7 @@
 
   <div class="form-controls-container">
     <div class="controls-flex-container">
-      <button class="button button-aux">Discard</button>
+      <button (click)="closeForm()" class="button button-aux">Discard</button>
       <div>
         <button class="button button-secondary">Save as Draft</button>
         <button class="button button-primary">Save & Send</button>
