--- a/frontend/src/app/components/pages/invoices/components/invoices.header.component.html
+++ b/frontend/src/app/components/pages/invoices/components/invoices.header.component.html
@@ -6,7 +6,7 @@
     </div>
     <div class="container-flex-right">
       <selection-popup-menu></selection-popup-menu>
-      <button-hero></button-hero>
+      <button-hero (clickEmitter)="onAddNew()"></button-hero>
     </div>
   </div>
 </header>
