--- a/frontend/src/app/components/pages/invoices/invoices.list.component.html
+++ b/frontend/src/app/components/pages/invoices/invoices.list.component.html
@@ -1,4 +1,7 @@
-<invoices-header-component></invoices-header-component>
+<invoices-header-component 
+  (onAddNewInvoice)="handleAddNew()"
+  >
+</invoices-header-component>
 <invoice-form></invoice-form>
 <div class="content-container">
   <div class="invoices-list-container">
