--- a/frontend/src/app/components/pages/invoices/components/invoice-form-component/invoice.form.component.scss
+++ b/frontend/src/app/components/pages/invoices/components/invoice-form-component/invoice.form.component.scss
@@ -4,6 +4,7 @@
 
 $controls-bar-height: 110px;
 $form-margin-size: 56px;
+$form-transition-duration: 0.35s;
 
 /* TODO - refine active/inactive */
 
@@ -34,7 +35,7 @@ $form-margin-size: 56px;
 
     background-color: transparent;
 
-    transition: background-color 0.3s ease-out;
+    transition: background-color $form-transition-duration ease-out;
 
     opacity: 50%;
 
@@ -62,7 +63,7 @@ $form-margin-size: 56px;
 
   z-index: 10;
 
-  transition: transform 0.5s ease-out;
+  transition: transform $form-transition-duration ease-out;
 
   padding-left: $sidebar-nav-width;
 
@@ -157,7 +158,7 @@ $form-margin-size: 56px;
   box-shadow: 0px 34px 157px 0px rgba(0,0,0,0.21);
 
   transform: translate(-1000px, 0px);
-  transition: transform 0.5s ease-out;
+  transition: transform $form-transition-duration ease-out;
 }
 
 .controls-flex-container{
