--- a/frontend/src/styles/_utilities.scss
+++ b/frontend/src/styles/_utilities.scss
@@ -27,6 +27,10 @@
   font-weight: bold;
 }
 
+.button:hover{
+  cursor: pointer;
+}
+
 .button-primary{
   color: white;
   background-color: $color-primary-main;
