--- a/frontend/src/app/components/shared/inputs/input.field.component.scss
+++ b/frontend/src/app/components/shared/inputs/input.field.component.scss
@@ -32,3 +32,9 @@
   outline: none;
   border-color: $color-primary-main;
 }
+
+.input-centered{
+  padding: 0 !important;
+
+  text-align: center;
+}
