--- a/frontend/src/app/components/pages/invoices/components/invoice-form-component/invoice.form.component.scss
+++ b/frontend/src/app/components/pages/invoices/components/invoice-form-component/invoice.form.component.scss
@@ -93,6 +93,10 @@ $form-transition-duration: 0.35s;
   margin-bottom: 48px;
 }
 
+.form-container > form fieldset:last-child{
+  margin-top: -16px;
+}
+
 .hash-prefix{
   color: $color-contrast-medium-darker;
 }
@@ -193,4 +197,43 @@ $form-transition-duration: 0.35s;
 
 .top-container-background-dim.active > .form-controls-container{
   transform: translate(0, 0);
+}
+
+.item-list-header-span{
+  color: #777F98 !important;
+  font-size: 18px !important;
+}
+
+.invoice-items-list{
+  display: block;
+}
+
+.invoice-items-list tr{
+  display: grid;
+  grid-template-columns: 42.46% 9.13% 19.84% 18.94%;
+  grid-column-gap: 3.21%;
+
+  margin-bottom: 18px;
+}
+
+.invoice-items-list tr:first-child{
+  text-align: left;
+  font-size: 12px;
+  color: $color-contrast-medium-lighter;
+
+  margin-bottom: 16px;
+}
+
+.totals-container{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+  font-weight: bold;
+  font-size: 12px;
+  color: $color-contrast-medium-darker;
+}
+
+.add-item-container{
+  margin-top: 35px;
 }
