invoiceForm now calculates item totals; add types file;

--- a/frontend/src/app/components/pages/invoices/components/invoice-form-component/invoice.form.component.html
+++ b/frontend/src/app/components/pages/invoices/components/invoice-form-component/invoice.form.component.html
@@ -152,7 +152,7 @@
                   </input-field>
                 </td>
                 <td class="totals-container">
-                  <span>155</span>
+                  <span>{{getTotal(i)}}</span>
                   <img (click)="removeItem(i)" src="/assets/icon-delete.svg" alt="delete.ico">
                 </td>
               </tr>
