--- a/frontend/src/app/components/pages/invoices/components/status-info-label.component.scss
+++ b/frontend/src/app/components/pages/invoices/components/status-info-label.component.scss
@@ -1,3 +1,5 @@
+@import 'src/styles/config';
+
 .content-container{
   width: 124px;
 
@@ -6,7 +8,7 @@
   align-items: center;
 }
 
-.content-container button{
+.info-label {
   position: relative;
 
   width: 104px;
@@ -52,6 +54,11 @@
 }
 
 .bulletpoint{
-  font-size: 15px;
+  height: 8px;
+  width: 8px;
+
+  border-radius: 50%;
+
+  background-color: #33D69F;
   margin-right: 8px;
 }
