--- a/frontend/src/app/components/pages/invoices/invoices.list.component.scss
+++ b/frontend/src/app/components/pages/invoices/invoices.list.component.scss
@@ -1,3 +1,5 @@
+@import 'src/styles/config';
+
 .content-container{
   margin-top: 65px;
 }
@@ -5,4 +7,39 @@
 .invoices-list-container{
   display: grid;
   grid-gap: 16px;
+}
+
+.no-content-container{
+  margin-top: 76px;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.no-content-container img{
+  width: 241px;
+  height: 200px;
+}
+
+.no-content-msg-container{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.no-content-msg-container h3{
+  margin-top: 64px;
+  font-size: 20px;
+}
+
+.no-content-msg-container span{
+  margin-top: 24px;
+  max-width: 220px;
+
+  font-size: 11.6px;
+  color: $color-contrast-medium-darker;
+
+  text-align: center;
 }
