refactor: move status-info component to shared components;

--- a/frontend/src/app/components/pages/invoices/components/invoice-brief.component.scss
+++ b/frontend/src/app/components/pages/invoices/components/invoice-brief.component.scss
@@ -57,3 +57,11 @@
   font-size: 16px;
   font-weight: bold;
 }
+
+.status-container{
+  width: 124px;
+
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
