refactor invoice-list page folder; add routing;

--- a/frontend/src/app/components/layout/page-frame/page-frame.component.html
+++ b/frontend/src/app/components/layout/page-frame/page-frame.component.html
@@ -1,5 +1,5 @@
 <div class="content-container">
   <div class="page-container">
-    <invoices-list-component></invoices-list-component>
+    <router-outlet></router-outlet>
   </div>
 </div>
