--- a/frontend/src/app/components/pages/invoice/invoice.component.scss
+++ b/frontend/src/app/components/pages/invoice/invoice.component.scss
@@ -131,4 +131,89 @@ article{
   margin-top: 9px;
 }
 
+.invoice-item-details{
+  margin-top: 45px;
+
+  padding: 32px;
+  padding-bottom: 0;
+  
+  background-color: #F9FAFE;
+  border-top-left-radius: 8px;
+  border-top-right-radius: 8px;
+}
+
+.items-table-container{
+  table{
+    width: 100%;
+  }
+
+  table > thead, tr {
+    display: grid;
+    grid-template-columns: 50.18% 8% 19.54% 22.28%;
+  }
+
+  table thead th, table tr{
+    text-align: right;
+  }
+
+  table thead th:first-child, table tr td:first-child{
+    text-align: left;
+  }
+
+  table thead th:nth-child(2), table tr td:nth-child(2){
+    text-align: center;
+  }
+
+  table thead{
+    margin-bottom: 32px;
+
+    color: $color-contrast-medium-lighter;
+    font-size: 11px;
+  }
+
+  table tr{
+    font-size: 12px;
+    color: $color-contrast-medium-lighter;
+    font-weight: bold;
+  }
+
+  table tr:not(:last-child){
+    margin-bottom: 32px;
+  }
+
+  table tr:last-child{
+    margin-bottom: 40px;
+  }
+
+  table tr td:first-child, table tr td:last-child{
+    color: black;
+  }
+}
+
+.sum-container{
+  height: 80px;
+
+  padding-left: 32px;
+  padding-right: 32px;
+
+  background-color: $color-accent-3;
+
+  border-bottom-left-radius: 8px;
+  border-bottom-right-radius: 8px;
+
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+  span{
+    color: white;
+    font-size: 11px;
+  }
+
+  span:nth-child(2){
+    font-size: 24px;
+    font-weight: bold;
+  }
+}
+
 
