--- a/frontend/src/app/components/pages/invoice/invoice.component.html
+++ b/frontend/src/app/components/pages/invoice/invoice.component.html
@@ -22,13 +22,13 @@
     <header class="invoice-header">
       <div class="id-desc-container">
         <h4><span>#</span>{{invoiceId}}</h4>
-        <span>Graphic Design</span>
+        <span>{{billTo.description}}</span>
       </div>
       <div class="address-info-container">
-        <span>19 Union Terrace</span>
-        <span>London</span>
-        <span>E1 3EZ</span>
-        <span>United Kingdom</span>
+        <span>{{billFrom.streetAddress}}</span>
+        <span>{{billFrom.city}}</span>
+        <span>{{billFrom.postCode}}</span>
+        <span>{{billFrom.country}}</span>
       </div>
     </header>
 
@@ -36,25 +36,25 @@
       <div class="dates-container">
         <div>
           <span class="txt-light">Invoice Date</span>
-          <span class="txt-strong">21 Aug 2021</span>
+          <span class="txt-strong">{{billTo.date}}</span>
         </div>
         <div>
           <span class="txt-light">Payment Due</span>
-          <span class="txt-strong">20 Sep 2021</span>
+          <span class="txt-strong">{{billTo.terms}}</span>
         </div>
       </div>
 
       <div class="client-info-container">
         <span>Bill To</span>
-        <span class="txt-strong">Alex Grim</span>
-        <span>84 Church Way</span>
-        <span>Bradford</span>
-        <span>BD1 9PB</span>
-        <span>United Kingdom</span>
+        <span class="txt-strong">{{billTo.clientName}}</span>
+        <span>{{billTo.streetAddress}}</span>
+        <span>{{billTo.city}}</span>
+        <span>{{billTo.postCode}}</span>
+        <span>{{billTo.country}}</span>
       </div>
       <div class="mail-recipient-container">
         <span class="txt-light">Sent to</span>
-        <span class="txt-strong">alexgrim@mail.com</span>
+        <span class="txt-strong">{{billTo.clientEmail}}</span>
       </div>
     </section>
 
@@ -67,24 +67,20 @@
             <th>Price</th>
             <th>total</th>
           </thead>
-          <tr>
-            <td>Banner Design</td>
-            <td>1</td>
-            <td>£ 156.00</td>
-            <td>£ 156.00</td>
-          </tr>
-          <tr>
-            <td>Email Design</td>
-            <td>2</td>
-            <td>£ 200.00</td>
-            <td>£ 400.00</td>
-          </tr>
+          <ng-container *ngFor="let item of invoiceItems; let i = index;">
+            <tr>
+              <td>{{item.name}}</td>
+              <td>{{item.quantity}}</td>
+              <td>£ {{item.price}}</td>
+              <td>£ {{getItemSum(i)}}</td>
+            </tr>
+        </ng-container>
         </table>
       </div>
     </section>
     <section class="sum-container">
       <span>Amount Due</span>
-      <span>£ 556.00</span>
+      <span>£ {{totalSum}}</span>
     </section>
 
   </article>
